--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -8,6 +8,8 @@
     <title>ui</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
+    <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
   </head>
   <body>
     <noscript>
