--- a/ihris-backend/public/index.html
+++ b/ihris-backend/public/index.html
@@ -5,8 +5,8 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico>
-    <title>MoH-NHWR-UGANDA</title>
+    <link rel=icon href=/logo.png>
+    <title>MOH-NHWR</title>
     <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
     <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
     <link href=/css/fhir-codesystem.5c8076a7.css rel=prefetch>
@@ -44,7 +44,7 @@
     <link href=/js/resource.e73e3253.js rel=prefetch>
     <link href=/css/app.052efa8f.css rel=preload as=style>
     <link href=/css/chunk-vendors.79d3bd9b.css rel=preload as=style>
-    <link href=/js/app.fd596a5f.js rel=preload as=script>
+    <link href=/js/app.6207b6af.js rel=preload as=script>
     <link href=/js/chunk-vendors.4a1bcb1a.js rel=preload as=script>
     <link href=/css/chunk-vendors.79d3bd9b.css rel=stylesheet>
     <link href=/css/app.052efa8f.css rel=stylesheet>
@@ -54,7 +54,7 @@
             it to continue.</strong></noscript>
     <div id=app></div>
     <script src=/js/chunk-vendors.4a1bcb1a.js></script>
-    <script src=/js/app.fd596a5f.js></script>
+    <script src=/js/app.6207b6af.js></script>
 </body>
 
 </html>
